JETcompiler/ANTLRgenerated/jet/JavaletteParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/akuda/school/JETcompiler/src/jet/Javalette.g 2011-01-23 21:38:36

package jet;
import jet.tree.*;
import jet.tree.expr.*;
import jet.types.*;
import java.util.ArrayList;
import java.util.List;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class JavaletteParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENT", "INTEGER_LITERAL", "FLOAT_LITERAL", "DOUBLE_LITERAL", "LOGICAL_LITERAL", "STRING_LITERAL", "WS", "COMMENT", "BAD_COMMENT", "'('", "')'", "','", "'class'", "'{'", "'}'", "'['", "']'", "'boolean'", "'void'", "'int'", "'double'", "'string'", "'float'", "';'", "'='", "'if'", "'else'", "'while'", "'for'", "'return'", "'+='", "'-='", "'*='", "'/='", "'%='", "'<<='", "'>>='", "'||'", "'&&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'new'", "'!'", "'--'", "'++'", "'.'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int BAD_COMMENT=12;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int DOUBLE_LITERAL=7;
    public static final int EOF=-1;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__19=19;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int STRING_LITERAL=9;
    public static final int T__16=16;
    public static final int T__51=51;
    public static final int T__15=15;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__18=18;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int LOGICAL_LITERAL=8;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int IDENT=4;
    public static final int COMMENT=11;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int FLOAT_LITERAL=6;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=10;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int INTEGER_LITERAL=5;

    // delegates
    // delegators


        public JavaletteParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public JavaletteParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return JavaletteParser.tokenNames; }
    public String getGrammarFileName() { return "/home/akuda/school/JETcompiler/src/jet/Javalette.g"; }


      @Override
      public void reportError(RecognitionException e) {
        throw new IllegalArgumentException(e);
      }
      



    // $ANTLR start "program"
    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:40:1: program returns [Program result] : ( class_definition )* ( function_definition )* ;
    public final Program program() throws RecognitionException {
        Program result = null;

        ClassDefinition class_definition1 = null;

        FunctionDefinition function_definition2 = null;


        try {
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:41:3: ( ( class_definition )* ( function_definition )* )
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:41:5: ( class_definition )* ( function_definition )*
            {

                  List<FunctionDefinition> Functions = new ArrayList<FunctionDefinition>();
                  List<ClassDefinition>    Classes   = new ArrayList<ClassDefinition>();
                
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:45:5: ( class_definition )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==16) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:45:6: class_definition
            	    {
            	    pushFollow(FOLLOW_class_definition_in_program67);
            	    class_definition1=class_definition();

            	    state._fsp--;

            	    Classes.add(class_definition1);

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:46:5: ( function_definition )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==IDENT||(LA2_0>=21 && LA2_0<=26)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:46:6: function_definition
            	    {
            	    pushFollow(FOLLOW_function_definition_in_program81);
            	    function_definition2=function_definition();

            	    state._fsp--;

            	    Functions.add(function_definition2);

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            result = new Program(Functions, Classes); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "program"


    // $ANTLR start "function_definition"
    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:53:1: function_definition returns [FunctionDefinition result] : typename identifier '(' argument_list ')' compound_stmt ;
    public final FunctionDefinition function_definition() throws RecognitionException {
        FunctionDefinition result = null;

        JavaletteParser.identifier_return identifier3 = null;

        JavaletteParser.argument_list_return argument_list4 = null;

        TypeDescriptor typename5 = null;

        CompoundStmt compound_stmt6 = null;


        try {
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:54:3: ( typename identifier '(' argument_list ')' compound_stmt )
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:54:5: typename identifier '(' argument_list ')' compound_stmt
            {
            pushFollow(FOLLOW_typename_in_function_definition112);
            typename5=typename();

            state._fsp--;

            pushFollow(FOLLOW_identifier_in_function_definition114);
            identifier3=identifier();

            state._fsp--;

            match(input,13,FOLLOW_13_in_function_definition116); 
            pushFollow(FOLLOW_argument_list_in_function_definition118);
            argument_list4=argument_list();

            state._fsp--;

            match(input,14,FOLLOW_14_in_function_definition120); 
            pushFollow(FOLLOW_compound_stmt_in_function_definition122);
            compound_stmt6=compound_stmt();

            state._fsp--;


                  result = new FunctionDefinition((identifier3!=null?identifier3.line:0), new FunctionType((argument_list4!=null?argument_list4.Types:null), typename5),
                                                   (identifier3!=null?identifier3.result:null),
                                                   (argument_list4!=null?argument_list4.Identifiers:null),
                                                   compound_stmt6);
                

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "function_definition"


    // $ANTLR start "constructor_definition"
    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:63:1: constructor_definition returns [ConstructorDefinition result] : identifier '(' argument_list ')' compound_stmt ;
    public final ConstructorDefinition constructor_definition() throws RecognitionException {
        ConstructorDefinition result = null;

        JavaletteParser.argument_list_return argument_list7 = null;

        JavaletteParser.identifier_return identifier8 = null;

        CompoundStmt compound_stmt9 = null;


        try {
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:64:3: ( identifier '(' argument_list ')' compound_stmt )
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:64:6: identifier '(' argument_list ')' compound_stmt
            {
            pushFollow(FOLLOW_identifier_in_constructor_definition148);
            identifier8=identifier();

            state._fsp--;

            match(input,13,FOLLOW_13_in_constructor_definition150); 
            pushFollow(FOLLOW_argument_list_in_constructor_definition152);
            argument_list7=argument_list();

            state._fsp--;

            match(input,14,FOLLOW_14_in_constructor_definition154); 
            pushFollow(FOLLOW_compound_stmt_in_constructor_definition156);
            compound_stmt9=compound_stmt();

            state._fsp--;


                  result = new ConstructorDefinition((argument_list7!=null?argument_list7.Types:null), (argument_list7!=null?argument_list7.Identifiers:null),
                                                      (identifier8!=null?identifier8.result:null), compound_stmt9, (identifier8!=null?identifier8.line:0));
                

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "constructor_definition"

    public static class argument_list_return extends ParserRuleReturnScope {
        public List<TypeDescriptor> Types;
        public List<String> Identifiers;
    };

    // $ANTLR start "argument_list"
    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:71:1: argument_list returns [List<TypeDescriptor> Types, List<String> Identifiers] : (t0= typename i0= identifier ( ',' t1= typename i1= identifier )* )? ;
    public final JavaletteParser.argument_list_return argument_list() throws RecognitionException {
        JavaletteParser.argument_list_return retval = new JavaletteParser.argument_list_return();
        retval.start = input.LT(1);

        TypeDescriptor t0 = null;

        JavaletteParser.identifier_return i0 = null;

        TypeDescriptor t1 = null;

        JavaletteParser.identifier_return i1 = null;


        try {
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:72:3: ( (t0= typename i0= identifier ( ',' t1= typename i1= identifier )* )? )
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:72:5: (t0= typename i0= identifier ( ',' t1= typename i1= identifier )* )?
            {
            retval.Types = new ArrayList<TypeDescriptor>(); retval.Identifiers = new ArrayList<String>();
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:73:5: (t0= typename i0= identifier ( ',' t1= typename i1= identifier )* )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==IDENT||(LA4_0>=21 && LA4_0<=26)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:74:7: t0= typename i0= identifier ( ',' t1= typename i1= identifier )*
                    {
                    pushFollow(FOLLOW_typename_in_argument_list197);
                    t0=typename();

                    state._fsp--;

                    pushFollow(FOLLOW_identifier_in_argument_list201);
                    i0=identifier();

                    state._fsp--;

                    retval.Types.add(t0); retval.Identifiers.add((i0!=null?i0.result:null)); 
                    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:75:7: ( ',' t1= typename i1= identifier )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==15) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:75:8: ',' t1= typename i1= identifier
                    	    {
                    	    match(input,15,FOLLOW_15_in_argument_list218); 
                    	    pushFollow(FOLLOW_typename_in_argument_list222);
                    	    t1=typename();

                    	    state._fsp--;

                    	    pushFollow(FOLLOW_identifier_in_argument_list226);
                    	    i1=identifier();

                    	    state._fsp--;

                    	    retval.Types.add(t1); retval.Identifiers.add((i1!=null?i1.result:null)); 

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "argument_list"


    // $ANTLR start "class_definition"
    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:80:1: class_definition returns [ClassDefinition result] : 'class' identifier '{' ( ( declaration_stmt ) | ( function_definition ) | ( constructor_definition ) )* '}' ;
    public final ClassDefinition class_definition() throws RecognitionException {
        ClassDefinition result = null;

        DeclarationListStmt declaration_stmt10 = null;

        FunctionDefinition function_definition11 = null;

        ConstructorDefinition constructor_definition12 = null;

        JavaletteParser.identifier_return identifier13 = null;


        try {
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:81:3: ( 'class' identifier '{' ( ( declaration_stmt ) | ( function_definition ) | ( constructor_definition ) )* '}' )
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:81:5: 'class' identifier '{' ( ( declaration_stmt ) | ( function_definition ) | ( constructor_definition ) )* '}'
            {

                  List<FunctionDefinition> Functions = new ArrayList<FunctionDefinition>();
                  DeclarationListStmt Declarations = new DeclarationListStmt();
                  List<ConstructorDefinition> Constructors = new ArrayList<ConstructorDefinition>();
                
            match(input,16,FOLLOW_16_in_class_definition268); 
            pushFollow(FOLLOW_identifier_in_class_definition270);
            identifier13=identifier();

            state._fsp--;

            match(input,17,FOLLOW_17_in_class_definition276); 
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:88:5: ( ( declaration_stmt ) | ( function_definition ) | ( constructor_definition ) )*
            loop5:
            do {
                int alt5=4;
                alt5 = dfa5.predict(input);
                switch (alt5) {
            	case 1 :
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:89:7: ( declaration_stmt )
            	    {
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:89:7: ( declaration_stmt )
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:89:8: declaration_stmt
            	    {
            	    pushFollow(FOLLOW_declaration_stmt_in_class_definition292);
            	    declaration_stmt10=declaration_stmt();

            	    state._fsp--;

            	    Declarations = DeclarationListStmt.MergeLists(Declarations, declaration_stmt10); 

            	    }


            	    }
            	    break;
            	case 2 :
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:92:7: ( function_definition )
            	    {
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:92:7: ( function_definition )
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:92:8: function_definition
            	    {
            	    pushFollow(FOLLOW_function_definition_in_class_definition323);
            	    function_definition11=function_definition();

            	    state._fsp--;

            	    Functions.add(function_definition11);

            	    }


            	    }
            	    break;
            	case 3 :
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:95:7: ( constructor_definition )
            	    {
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:95:7: ( constructor_definition )
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:95:8: constructor_definition
            	    {
            	    pushFollow(FOLLOW_constructor_definition_in_class_definition388);
            	    constructor_definition12=constructor_definition();

            	    state._fsp--;

            	    Constructors.add(constructor_definition12);

            	    }


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            match(input,18,FOLLOW_18_in_class_definition411); 
            result = new ClassDefinition((identifier13!=null?identifier13.result:null), Declarations,Functions, Constructors);

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "class_definition"


    // $ANTLR start "typename"
    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:106:1: typename returns [TypeDescriptor result] : ( array_type | unit_type );
    public final TypeDescriptor typename() throws RecognitionException {
        TypeDescriptor result = null;

        TypeDescriptor array_type14 = null;

        TypeDescriptor unit_type15 = null;


        try {
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:107:3: ( array_type | unit_type )
            int alt6=2;
            alt6 = dfa6.predict(input);
            switch (alt6) {
                case 1 :
                    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:107:5: array_type
                    {
                    pushFollow(FOLLOW_array_type_in_typename442);
                    array_type14=array_type();

                    state._fsp--;

                    result = array_type14;

                    }
                    break;
                case 2 :
                    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:108:5: unit_type
                    {
                    pushFollow(FOLLOW_unit_type_in_typename452);
                    unit_type15=unit_type();

                    state._fsp--;

                    result = unit_type15; 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "typename"


    // $ANTLR start "unit_type"
    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:111:1: unit_type returns [TypeDescriptor result] : ( primitive_type | named_type );
    public final TypeDescriptor unit_type() throws RecognitionException {
        TypeDescriptor result = null;

        TypeDescriptor primitive_type16 = null;

        TypeDescriptor named_type17 = null;


        try {
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:112:3: ( primitive_type | named_type )
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( ((LA7_0>=21 && LA7_0<=26)) ) {
                alt7=1;
            }
            else if ( (LA7_0==IDENT) ) {
                alt7=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:112:5: primitive_type
                    {
                    pushFollow(FOLLOW_primitive_type_in_unit_type476);
                    primitive_type16=primitive_type();

                    state._fsp--;

                    result = primitive_type16;

                    }
                    break;
                case 2 :
                    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:113:5: named_type
                    {
                    pushFollow(FOLLOW_named_type_in_unit_type485);
                    named_type17=named_type();

                    state._fsp--;

                    result = named_type17;    

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "unit_type"


    // $ANTLR start "array_type"
    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:116:1: array_type returns [TypeDescriptor result] : unit_type ( '[' ']' )+ ;
    public final TypeDescriptor array_type() throws RecognitionException {
        TypeDescriptor result = null;

        TypeDescriptor unit_type18 = null;


        try {
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:117:3: ( unit_type ( '[' ']' )+ )
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:117:5: unit_type ( '[' ']' )+
            {
            pushFollow(FOLLOW_unit_type_in_array_type511);
            unit_type18=unit_type();

            state._fsp--;

            result = unit_type18;
            // /home/akuda/school/JETcompiler/src/jet/Javalette.g:118:5: ( '[' ']' )+
            int cnt8=0;
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==19) ) {
                    int LA8_2 = input.LA(2);

                    if ( (LA8_2==20) ) {
                        alt8=1;
                    }


                }


                switch (alt8) {
            	case 1 :
            	    // /home/akuda/school/JETcompiler/src/jet/Javalette.g:118:6: '[' ']'
            	    {
            	    match(input,19,FOLLOW_19_in_array_type520); 
            	    match(input,20,FOLLOW_20_in_array_type522); 
            	    result = new ArrayType(result);

            	    }
            	    break;
